# ibish

./: .codespellrc  .envrc  .gitignore  .pre-commit-config.yaml  .releaserc.js  README.md  flake.nix  poetry-overrides.nix  pyproject.toml
ci/release/: prepare.sh
ibish/: __init__.py  compiler.py
nix/: ibish.nix  overlay.nix
